--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/mettime.js"></script>
     <script src="js/script.js"></script>
 </head>
+
 <body>
     <!-- <video src="./music/bgm.mp3" autoplay="autoplay" width="0" loop="loop"></video>
     <audio autoplay = "autoplay">
@@ -23,10 +24,10 @@
     <audio id="voice"  src="./music/audio.m4a" loop autoplay></audio>
     <!--将音频导入网页中-->
 	<canvas id="sakura"></canvas>
-
 	<div class="draft">
-		<div style="text-align: center" onclick="play()"> <span class="my_zzilcc">You are the love of my life<i class="fa fa-heart myheart"></i></span></div>
-		<div>
+		<div style="text-align: center" onclick="play()"> 
+            <span class="my_zzilcc">You are the love of my life<i class="fa fa-heart myheart"></i></span></div>
+        <div>
             <p id="p1" class ="trans">Mine eye and heart are at a mortal war,</p>
             <p id="p2" class ="trans">How to divide the conquest of thy sight,</p>  
             <p id="p3" class ="trans">Mine eye my heart thy picture's sight would bar,</p>
@@ -46,6 +47,7 @@
             <p>We have known each other for </p>
             <p><span id="day"></span> <span id="hour"></span> <span id="minute"></span> <span id="second"></span>.</p>
             <p onclick="playvoice()">Click me after reading</p>
+            <p><a href="CountDown/index.html">I am waiting for you</a></p>
 		</div>
 
 		<i class="pin"></i>
