--- a/CountDown/index.html
+++ b/CountDown/index.html
@@ -20,46 +20,43 @@
 <body>
     <section class="w3l-coming-soon-page">
 		<div class="coming-page-infohny">
-			<div class="wrapper">
-				<div class="header">
-					<div class="logo">
-						<a class="brand-logo" href="../index.html">LiYuelin520</a>
+				<div class="wrapper">
+					<div class="header">
+						<div class="logo">
+							<a class="brand-logo" href="../index.html">LiYuelin520</a>
+						</div>
 					</div>
-				</div>
-				<div class="coming-block">
-                    <h1>LiYuelin is arriving at</h1>
-                    <!-- <h1>Coming in</h1> -->
-                    <!-- <p class="parahny">YueLin is comming home at</p> -->
-					<div class="countdown">
-						<div class="countdown__days">
-							<div class="number"></div>
-							<span class>Days</span>
-						</div>
+					<div class="coming-block">
+						<h1>LiYuelin will be free in</h1>
+						<div class="countdown">
+							<div class="countdown__days">
+								<div class="number"></div>
+								<span class>Days</span>
+							</div>
+	
+							<div class="countdown__hours">
+								<div class="number"></div>
+								<span class>Hours</span>
+							</div>
+	
+							<div class="countdown__minutes">
+								<div class="number"></div>
+								<span class>Minutes</span>
+							</div>
 
-						<div class="countdown__hours">
-							<div class="number"></div>
-							<span class>Hours</span>
+							<div class="countdown__seconds">
+								<div class="number"></div>
+								<span class>Seconds</span>
+							</div>
 						</div>
-
-						<div class="countdown__minutes">
-							<div class="number"></div>
-							<span class>Minutes</span>
-						</div>
-
-						<div class="countdown__seconds">
-							<div class="number"></div>
-							<span class>Seconds</span>
-						</div>
-                    </div>
-				</div>
-			
-			</div>
+					</div>
+				</div>	
 		</div>
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script>
 			(() => {
 				// Specify the deadline date
-				const deadlineDate = new Date('December 10, 2021 20:45:00').getTime();
+				const deadlineDate = new Date('December 24, 2021 19:35:00').getTime();
 
 				// Cache all countdown boxes into consts
 				const countdownDays = document.querySelector('.countdown__days .number');
