--- a/CountDown/index.html
+++ b/CountDown/index.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <!-- Head -->
+
 <head>
-    <title>Home</title>
-    <!-- Meta-Tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--Style-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-    <!--Font-awesome-icons -->
+	<title>Home</title>
+	<!-- Meta-Tags -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!--Style-CSS -->
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+	<!--Font-awesome-icons -->
 	<link href="css/font-awesome.min.css" rel="stylesheet">
-    <!--Google-fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+	<!--Google-fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <!-- //Head -->
 <!-- Body -->
-<body>
-    <section class="w3l-coming-soon-page">
-		<div class="coming-page-infohny">
-				<div class="wrapper">
-					<div class="header">
-						<div class="logo">
-							<a class="brand-logo" href="../index.html">LiYuelin520</a>
-						</div>
-					</div>
-					<div class="coming-block">
-						<h1>LiYuelin will be free in</h1>
-						<div class="countdown">
-							<div class="countdown__days">
-								<div class="number"></div>
-								<span class>Days</span>
-							</div>
-	
-							<div class="countdown__hours">
-								<div class="number"></div>
-								<span class>Hours</span>
-							</div>
-	
-							<div class="countdown__minutes">
-								<div class="number"></div>
-								<span class>Minutes</span>
-							</div>
 
-							<div class="countdown__seconds">
-								<div class="number"></div>
-								<span class>Seconds</span>
-							</div>
+<body>
+	<section class="w3l-coming-soon-page">
+		<div class="coming-page-infohny">
+			<div class="wrapper">
+				<div class="header">
+					<div class="logo">
+						<a class="brand-logo" href="../index.html">LiYuelin520</a>
+					</div>
+				</div>
+				<div class="coming-block">
+					<h1>LiYuelin has arrived </h1>
+					<div class="countdown">
+						<div class="countdown__days">
+							<div class="number"></div>
+							<span class>Days</span>
+						</div>
+
+						<div class="countdown__hours">
+							<div class="number"></div>
+							<span class>Hours</span>
+						</div>
+
+						<div class="countdown__minutes">
+							<div class="number"></div>
+							<span class>Minutes</span>
+						</div>
+
+						<div class="countdown__seconds">
+							<div class="number"></div>
+							<span class>Seconds</span>
 						</div>
 					</div>
-				</div>	
+				</div>
+			</div>
 		</div>
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script>
@@ -70,7 +72,7 @@
 					const currentDate = new Date().getTime();
 
 					// Calculate the distance between current date and time and the deadline date and time
-					const distance = deadlineDate - currentDate;
+					const distance = currentDate - deadlineDate;
 
 					// Calculations the data for remaining days, hours, minutes and seconds
 					const days = Math.floor(distance / (1000 * 60 * 60 * 24));
@@ -92,4 +94,5 @@
 
 </body>
 <!-- //Body -->
+
 </html>
