--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <audio autoplay = "autoplay">
         <source src = "./music/bgm.mp3" type = "audio/mpeg">
     </audio> -->
-    <audio id="music"  src="./music/Taylor Swift - LOVER(Piano).mp3" loop autoplay></audio>
+    <audio id="music"  src="./music/silence wang - like sunny like rainy.mp3" loop autoplay></audio>
     <audio id="voice"  src="./music/audio.m4a" loop autoplay></audio>
     <!--将音频导入网页中-->
 	<canvas id="sakura"></canvas>
@@ -47,7 +47,7 @@
             <p>We have known each other for </p>
             <p><span id="day"></span> <span id="hour"></span> <span id="minute"></span> <span id="second"></span>.</p>
             <p onclick="playvoice()">Click me after reading</p>
-            <p><a href="CountDown/index.html">I am waiting for you</a></p>
+            <p><a href="CountDown/index.html">The next birthday is in...</a></p>
 		</div>
 
 		<i class="pin"></i>
